--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,38 @@
 header {
-  height: 40px;
-  margin: 0 auto;
-  padding: 20px 0;
-  text-align: center;
+  height: 60px;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
 }
 
 header svg {
-  display: block;
-  width: 100%; height: 100%;
+  width: 30%;
+  height: 100%;
+  align-self: center;
+  margin-left: 14px;
+  margin-right: 24px;
+}
+
+nav {
+  width: 70%;
+  background: #f5f5f5;
+
+  /* Temporary BG */
+  /* background: gray; */
+
+  padding: 0 14px;
+  margin-right: 4px;
+  margin-top: 3px;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  height: 100%;
+  align-items: center;
+}
+
+ul:first-child {
+  padding-left: 7px;
 }
