--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,7 @@
+:root {
+  --seconday-text: #9e9e9e;
+}
+
 #app {
   position: absolute;
   display: flex;
@@ -17,19 +21,50 @@
   background: white;
   border-radius: 3px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, .9);
+  overflow: hidden;
 }
 
 #app .container-view {
   padding: 20px;
-
+  background: #fdfdfc;
+  position: relative;
 }
 
-.call-summary {
-  border: 1px solid gray;
+.call-summary, .archive-calls {
   display: flex;
   align-items: center;
   position: relative;
   padding: 10px 0 12px;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  background-color: white;
+}
+
+.inbox {
+  margin-top: 30px;
+}
+
+.call-date {
+  text-align: center;
+  color: var(--seconday-text);
+  font-weight: 600;
+}
+
+.call-summary {
+  margin: 15px 0;
+}
+
+.archive-calls {
+  width: calc(100% - 40px);
+  position: absolute;
+  top: 0;
+  border-top: none;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.archive-calls span {
+  margin-left: 15px;
 }
 
 .call-type {
@@ -41,9 +76,28 @@
   display: block;
   margin: 0;
   padding: 2px 0;
+  font-weight: 600;
+}
+
+.call-to {
+  color: var(--seconday-text);
 }
 
 .call-time {
   position: absolute;
-  right: 0;
+  right: 3px;
+  word-spacing: 5px;
+  color: var(--seconday-text);
+}
+
+.call-time span {
+  width: 27px;
+  height: 17px;
+  position: absolute;
+  right: -4px;
+  top: -1px;
+  border: 1px solid #e0e0e0;
+  border-right: none;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
