--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,6 +3,8 @@ header {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
+  background: white;
+  border-bottom: 1px solid #e0e0e0;
 }
 
 header svg {
@@ -15,14 +17,13 @@ header svg {
 
 nav {
   width: 70%;
-  background: #f5f5f5;
-
-  /* Temporary BG */
-  /* background: gray; */
-
+  background: rgb(233,233,233);
+  background: linear-gradient(180deg, rgba(233,233,233,1) 0%, rgba(255,255,255,1) 100%);
   padding: 0 14px;
   margin-right: 4px;
   margin-top: 3px;
+  border: 1px solid #e0e0e0;
+  border-bottom: 0;
 }
 
 ul {
