--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,11 +19,13 @@ nav {
   width: 70%;
   background: rgb(233,233,233);
   background: linear-gradient(180deg, rgba(233,233,233,1) 0%, rgba(255,255,255,1) 100%);
-  padding: 0 14px;
+  padding-left: 14px;
   margin-right: 4px;
   margin-top: 3px;
   border: 1px solid #e0e0e0;
   border-bottom: 0;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 ul {
