--- a/src/css/app.css
+++ b/src/css/app.css
@@ -67,6 +67,10 @@
   border-top-right-radius: 0;
 }
 
+.archive-calls:hover {
+  cursor: pointer;
+}
+
 .archive-calls span {
   margin-left: 15px;
 }
