--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,5 @@
 :root {
+  --primary-text: #333;
   --seconday-text: #9e9e9e;
 }
 
@@ -22,6 +23,11 @@
   border-radius: 3px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, .9);
   overflow: hidden;
+}
+
+a {
+  color: var(--primary-text);
+  text-decoration: none;
 }
 
 #app .container-view {
@@ -108,4 +114,24 @@
   border-right: none;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+}
+
+.call-details {
+  text-align: center;
+}
+
+.call-details p {
+  text-align: left;
+}
+
+.archive-btn {
+  background: green;
+  color: white;
+  border: 1px solid var(--primary-text);
+  padding: 5px 10px;
+  margin-top: 5px;
+}
+
+.archive-btn:hover {
+  cursor: pointer;
 }
