--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,6 +5,8 @@ header {
   justify-content: space-between;
   background: white;
   border-bottom: 1px solid #e0e0e0;
+  flex: 0 1 auto;
+  z-index: 1;
 }
 
 header svg {
