active tab, archive styling and unarchive all button

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -107,6 +107,10 @@ a {
 
 .call-to {
   color: var(--seconday-text);
+  white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 220px;
 }
 
 .call-time {
