--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,12 +18,10 @@
   width: 376px;
   height: 666px;
   z-index: 100;
-
   background: white;
   border-radius: 3px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, .9);
   overflow: hidden;
-
   display: flex; flex-direction: column;
 }
 
@@ -55,6 +53,7 @@ a {
   scrollbar-width: none; /* Firefox */
   flex: 1 1 auto;
   opacity: 0;
+  margin-top: 45px;
 }
 
 .calls-list::-webkit-scrollbar {
@@ -98,10 +97,13 @@ a {
   margin-right: 15px;
 }
 
-.call-summary p {
+p {
   display: block;
   margin: 0;
   padding: 2px 0;
+}
+
+.call-from, .call-to span, .call-time {
   font-weight: 600;
 }
 
@@ -115,16 +117,16 @@ a {
 
 .call-time {
   position: absolute;
-  right: 8px;
+  right: 4px;
   word-spacing: 5px;
   color: var(--seconday-text);
 }
 
 .call-time span {
-  width: 28px;
+  width: 32px;
   height: 17px;
   position: absolute;
-  right: -4px;
+  right: -8px;
   top: -1px;
   border: 1px solid #e0e0e0;
   border-right: none;
