mobile responsive media queries & styles

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -90,3 +90,9 @@ footer > div {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
+
+@media (max-width: 810px) {
+    footer {
+        width: 100%;
+    }
+}
