--- a/src/css/app.css
+++ b/src/css/app.css
@@ -227,3 +227,14 @@ p {
     opacity: 0;
   }
 }
+
+@media (max-width: 810px) {
+  #app .container {
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .container-view {
+    height: 100%;
+  }
+}
